# Lab1_UT

./: .gitignore  CMakeLists.txt  README.md  SortingAlgorithms.h  SortingAlgorithms.h.cpp  TextAnalyzer.h  TextEntities.h  TextEntities.h.cpp  list.h  list.h.cpp  main.cpp
tests/: ArayList_test.cpp  LinkedList_tests.cpp  SortingAlgorithms_test.cpp
